--- a/Allilepidrasi/Properties/Resources.resx
+++ b/Allilepidrasi/Properties/Resources.resx
@@ -181,4 +181,10 @@
   <data name="TuxedoPants" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\TuxedoPants.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Cooling" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Cooling.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Heating" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\Heating.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
