--- a/Allilepidrasi/Properties/Resources.resx
+++ b/Allilepidrasi/Properties/Resources.resx
@@ -145,9 +145,6 @@
   <data name="bathroomDark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\bathroomDark.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="backbutton" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\backbutton.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
   <data name="bedroom" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\bedroom.jpeg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -186,5 +183,8 @@
   </data>
   <data name="Heating" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\Heating.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="background1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\background1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
